[package]
name        = "file-lock"
version     = "2.1.3"
authors     = ["Alfie John <alfie@alfie.wtf>", "Sebastian Thiel <byronimo@gmail.com>", "Jacob Turner <jacob.turner870@gmail.com>", "Michael Lohr <michael@lohr.dev>", "Corey Richardson <corey@octayn.net>"]
description = "File locking via POSIX advisory record locks"
license     = "MIT"

documentation = "http://docs.rs/file-lock/"
homepage      = "https://crates.io/crates/file-lock"
repository    = "https://github.com/alfiedotwtf/file-lock"
readme        = "README.md"

build   = "build.rs"

[dependencies]
libc   = "=0.2.121"
mktemp = "=0.4.1"
nix    = { version = "=0.24.1", default-features = false, features = ["process"] }

[build-dependencies]
cc = "=1.0.72"
